# ankirai

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
ankirai/: cli.py  config.py  export.py  generate.py  manifest.py  models.py  parse.py
ankirai/review/: server.py
ankirai/review/static/: app.js
ankirai/review/templates/: base.html  bulk.html  exporting.html  review.html
docs/: cli-reference.md  configuration.md  getting-started.md  review-ui.md
tests/: conftest.py  test_config.py  test_export.py  test_generate.py  test_manifest.py  test_parse.py  test_review.py
