[project]
name = "ankirai"
version = "0.1.0"
description = "Transform your notes into Anki flashcards at lightning speed"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
authors = [
  { name="Weaver Goldman", email="we.goldm@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "markitdown[all]",
    "pydantic-ai",
    "genanki",
    "python-dotenv",
    "openai",
    "click",
    "platformdirs",
    "pydantic",
    "tqdm",
    "fastapi",
    "uvicorn",
    "jinja2",
    "tomli-w",
]

[project.urls]
Homepage = "https://github.com/We-Gold/ankirai"
Issues = "https://github.com/We-Gold/ankirai/issues"

[project.scripts]
ankirai = "ankirai.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
